--- a/resume/index.html
+++ b/resume/index.html
@@ -7,26 +7,30 @@
 </head>
 
 <body>
-    <div class="topNavBar clearfix">
-        <a class="logo" href="#">
-            <span class="rs">RS</span><span class="card">card</span>
-        </a>
-        <nav>
-            <ul class="clearfix">
-                <li><a href="#">关于</a></li>
-                <li><a href="#">技能</a></li>
-                <li><a href="#">作品</a></li>
-                <li><a href="#">博客</a></li>
-                <li><a href="#">日历</a></li>
-                <li><a href="#">联系方式</a></li>
-                <li><a href="#">其他</a></li>
-            </ul>
-        </nav>
+    <div class="topNavBar">
+        <div class="topNavBarDiv clearfix">
+            <a class="logo" href="#">
+                <span class="rs">RS</span><span class="card">card</span>
+            </a>
+            <nav>
+                <ul class="clearfix">
+                    <li><a href="#">关于</a></li>
+                    <li><a href="#">技能</a></li>
+                    <li><a href="#">作品</a></li>
+                    <li><a href="#">博客</a></li>
+                    <li><a href="#">日历</a></li>
+                    <li><a href="#">联系方式</a></li>
+                    <li><a href="#">其他</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
-    <div class="banner" style="background-image:url(#)"></div>
+    <div class="banner">
+        <div class="masker"></div>
+    </div>
     <main>
         <div class="card">
-            <div class="photo">
+            <div class="avatar">
                 <img src="#" alt="头像">
             </div>
             <div class="profile">
@@ -44,18 +48,18 @@
                     <dd>17032400190</dd>
                 </dl>
             </div>
-        </div>
 
-        <footer>
-            <ul>
-                <li><a href="#"><img src="#" alt="ico1"></a></li>
-                <li><a href="#"><img src="#" alt="ico2"></a></li>
-                <li><a href="#"><img src="#" alt="ico3"></a></li>
-                <li><a href="#"><img src="#" alt="ico4"></a></li>
-                <li><a href="#"><img src="#" alt="ico5"></a></li>
-                <li><a href="#"><img src="#" alt="ico6"></a></li>
-            </ul>
-        </footer>
+            <footer>
+                <ul>
+                    <li><a href="#"><img src="#" alt="ico1"></a></li>
+                    <li><a href="#"><img src="#" alt="ico2"></a></li>
+                    <li><a href="#"><img src="#" alt="ico3"></a></li>
+                    <li><a href="#"><img src="#" alt="ico4"></a></li>
+                    <li><a href="#"><img src="#" alt="ico5"></a></li>
+                    <li><a href="#"><img src="#" alt="ico6"></a></li>
+                </ul>
+            </footer>
+        </div>
 
         <a class="button" href="#">下载 PDF 简历</a>
 
