Feature: userCard 大名片

--- a/resume/index.html
+++ b/resume/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8">
     <title>Amanda's Resume</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="//at.alicdn.com/t/font_816691_7r0q31xwk3c.js"></script>
+    <style type="text/css">
+        .icon {
+           width: 1em; height: 1em;
+           vertical-align: -0.15em;
+           fill: currentColor;
+           overflow: hidden;
+        }
+    </style>
 </head>
 
 <body>
@@ -29,35 +38,52 @@
         <div class="masker"></div>
     </div>
     <main>
-        <div class="card">
-            <div class="avatar">
-                <img src="#" alt="头像">
-            </div>
-            <div class="profile">
-                <span class="welcome">Hello</span>
-                <h1>Amanda Huang</h1>
-                <p>Front-end Developer Engineer</p>
-                <dl>
-                    <dt>年龄</dt>
-                    <dd>20</dd>
-                    <dt>所在城市</dt>
-                    <dd>深圳</dd>
-                    <dt>邮箱</dt>
-                    <dd>amanda@gmail.com</dd>
-                    <dt>手机</dt>
-                    <dd>17032400190</dd>
-                </dl>
+        <div class="userCard">
+            <div class="avatarAndProfile clearfix">
+                <div class="avatar">
+                    <img src="img/avatar.jpg" width="299" height="347" alt="头像">
+                </div>
+                <div class="profile">
+                    <span class="welcome">HELLO
+                        <span class="triangle"></span>
+                    </span>
+                    <h1>Amanda</h1>
+                    <p>Front-end Developer Engineer</p>
+                    <hr>
+                    <dl class="clearfix">
+                        <dt>年龄</dt>
+                        <dd>20</dd>
+                        <dt>所在城市</dt>
+                        <dd>深圳</dd>
+                        <dt>邮箱</dt>
+                        <dd>amanda@gmail.com</dd>
+                        <dt>手机</dt>
+                        <dd>17032400190</dd>
+                    </dl>
+                </div>
             </div>
 
-            <footer>
-                <ul>
-                    <li><a href="#"><img src="#" alt="ico1"></a></li>
-                    <li><a href="#"><img src="#" alt="ico2"></a></li>
-                    <li><a href="#"><img src="#" alt="ico3"></a></li>
-                    <li><a href="#"><img src="#" alt="ico4"></a></li>
-                    <li><a href="#"><img src="#" alt="ico5"></a></li>
-                    <li><a href="#"><img src="#" alt="ico6"></a></li>
-                </ul>
+            <footer class="medi">
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-github"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-twitter"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-weibo"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-lingyingbiaozhun"></use>
+                    </svg>
+                </a>
             </footer>
         </div>
 
