修改类名 medi to media

--- a/resume/index.html
+++ b/resume/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
 
-            <footer class="medi">
+            <footer class="media">
                 <a href="#">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-github"></use>
