--- a/resume/index.html
+++ b/resume/index.html
@@ -87,9 +87,12 @@
             </footer>
         </div>
 
-        <a class="button" href="#">下载 PDF 简历</a>
+        <div class="downloadResumeWrapper">
+            <a class="downloadResume" target="_blank" href="./resume.pdf" download>下载 PDF 简历</a>
+        </div>
 
-        <p class="desc">Hello! I'm Amanda Huang. Senior Web Developer specializing in front-end development. 
+        <p class="desc">
+            Amanda Huang. Senior Web Developer specializing in front-end development. 
             Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, SQL, 
             and CSS in project management and customer relations.
         </p>
@@ -111,9 +114,9 @@
         <h2>作品集</h2>
         <nav>
             <ol>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>所有</li>
+                <li>框架</li>
+                <li>原生JS&amp;CSS</li>
             </ol>
         </nav>
 
