--- a/resume/index.html
+++ b/resume/index.html
@@ -38,7 +38,7 @@
         <div class="masker"></div>
     </div>
     <main>
-        <div class="userCard">
+        <div class="userCard contentBox">
             <div class="avatarAndProfile clearfix">
                 <div class="avatar">
                     <img src="img/avatar.jpg" width="299" height="347" alt="头像">
@@ -91,26 +91,55 @@
             <a class="downloadResume" target="_blank" href="./resume.pdf" download>下载 PDF 简历</a>
         </div>
 
-        <p class="desc">
+        <p class="desc contentBox">
             Amanda Huang. Senior Web Developer specializing in front-end development. 
             Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, SQL, 
             and CSS in project management and customer relations.
         </p>
     </main>
 
-    <section>
+    <section class="skill contentBox">
         <h2>专业技能</h2>
-        <ol>
-            <li>HTML 5 & CSS 3</li>
-            <li>JavaScript</li>
-            <li>jQuery</li>
-            <li>Vue</li>
-            <li>React</li>
-            <li>HTTP</li>
+        <ol class="clearfix">
+            <li>
+                HTML 5 & CSS 3
+                <div class="progressBar">
+                    <div class="progressBar-inner" style="width:60%;"></div>
+                </div>
+            </li>
+            <li>
+                JavaScript
+                <div class="progressBar">
+                    <div class="progressBar-inner" style="width:30%;"></div>
+                </div>
+            <li>
+                jQuery
+                <div class="progressBar">
+                    <div class="progressBar-inner" style="width:35%;"></div>
+                </div>
+            </li>
+            <li>
+                Vue
+                <div class="progressBar">
+                    <div class="progressBar-inner" style="width:20%;"></div>
+                </div>
+            </li>
+            <li>
+                React
+                <div class="progressBar">
+                    <div class="progressBar-inner" style="width:5%;"></div>
+                </div>
+            </li>
+            <li>
+                HTTP
+                <div class="progressBar">
+                    <div class="progressBar-inner" style="width:70%;"></div>
+                </div>
+            </li>
         </ol>
     </section>
 
-    <section>
+    <section class="contentBox">
         <h2>作品集</h2>
         <nav>
             <ol>
