--- a/resume/index.html
+++ b/resume/index.html
@@ -98,40 +98,40 @@
         </p>
     </main>
 
-    <section class="skill contentBox">
+    <section class="skills contentBox">
         <h2>专业技能</h2>
         <ol class="clearfix">
             <li>
-                HTML 5 & CSS 3
+                <span>HTML 5 & CSS 3</span>
                 <div class="progressBar">
                     <div class="progressBar-inner" style="width:60%;"></div>
                 </div>
             </li>
             <li>
-                JavaScript
+                <span>JavaScript</span>
                 <div class="progressBar">
                     <div class="progressBar-inner" style="width:30%;"></div>
                 </div>
             <li>
-                jQuery
+                <span>jQuery</span>
                 <div class="progressBar">
                     <div class="progressBar-inner" style="width:35%;"></div>
                 </div>
             </li>
             <li>
-                Vue
+                <span>Vue</span>
                 <div class="progressBar">
                     <div class="progressBar-inner" style="width:20%;"></div>
                 </div>
             </li>
             <li>
-                React
+                <span>React</span>
                 <div class="progressBar">
                     <div class="progressBar-inner" style="width:5%;"></div>
                 </div>
             </li>
             <li>
-                HTTP
+                <span>HTTP</span>
                 <div class="progressBar">
                     <div class="progressBar-inner" style="width:70%;"></div>
                 </div>
@@ -139,19 +139,30 @@
         </ol>
     </section>
 
-    <section class="contentBox">
+    <section class="works contentBox" style="">
         <h2>作品集</h2>
         <nav>
             <ol>
-                <li>所有</li>
-                <li>框架</li>
-                <li>原生JS&amp;CSS</li>
+                <li id="all">所有</li>
+                <li id="framework">框架</li>
+                <li id="native">原生JS&amp;CSS</li>
             </ol>
+            <div class="progressBar">
+                <div class="progressBar-inner"></div>
+            </div>
         </nav>
 
-        <div class="big"></div>
-        <div class="small"></div>
-        <div class="small"></div>
+        <div class="imgContainer clearPosition">
+            <div class="big">
+                <img src="img/1.jpg" alt="works-1">
+            </div>
+            <div class="small">
+                <img src="img/2.jpg" alt="works-2">
+            </div>
+            <div class="small">
+                <img src="img/3.jpg" alt="works-3">
+            </div>
+        </div>
     </section>
 </body>
 </html>
