--- a/resume/index.html
+++ b/resume/index.html
@@ -104,55 +104,55 @@
             <li>
                 <span>HTML 5 & CSS 3</span>
                 <div class="progressBar">
-                    <div class="progressBar-inner" style="width:60%;"></div>
+                    <div class="progress" style="width:60%;"></div>
                 </div>
             </li>
             <li>
                 <span>JavaScript</span>
                 <div class="progressBar">
-                    <div class="progressBar-inner" style="width:30%;"></div>
+                    <div class="progress" style="width:30%;"></div>
                 </div>
             <li>
                 <span>jQuery</span>
                 <div class="progressBar">
-                    <div class="progressBar-inner" style="width:35%;"></div>
+                    <div class="progress" style="width:35%;"></div>
                 </div>
             </li>
             <li>
                 <span>Vue</span>
                 <div class="progressBar">
-                    <div class="progressBar-inner" style="width:20%;"></div>
+                    <div class="progress" style="width:20%;"></div>
                 </div>
             </li>
             <li>
                 <span>React</span>
                 <div class="progressBar">
-                    <div class="progressBar-inner" style="width:5%;"></div>
+                    <div class="progress" style="width:5%;"></div>
                 </div>
             </li>
             <li>
                 <span>HTTP</span>
                 <div class="progressBar">
-                    <div class="progressBar-inner" style="width:70%;"></div>
+                    <div class="progress" style="width:70%;"></div>
                 </div>
             </li>
         </ol>
     </section>
 
-    <section class="works contentBox" style="">
+    <section class="portfolio contentBox" style="">
         <h2>作品集</h2>
         <nav>
             <ol>
-                <li id="all">所有</li>
-                <li id="framework">框架</li>
-                <li id="native">原生JS&amp;CSS</li>
+                <li id="portfolio1">所有</li>
+                <li id="portfolio2">框架</li>
+                <li id="portfolio3">原生JS&amp;CSS</li>
             </ol>
-            <div class="progressBar">
-                <div class="progressBar-inner"></div>
+            <div id="portfolioBar" class="bar state-1">
+                <div class="bar-inner"></div>
             </div>
         </nav>
 
-        <div class="imgContainer clearPosition">
+        <div class="works">
             <div class="big">
                 <img src="img/1.jpg" alt="works-1">
             </div>
@@ -164,5 +164,19 @@
             </div>
         </div>
     </section>
+    
+    <script>
+        portfolio1.onclick = function() {
+            portfolioBar.className = 'bar state-1'
+        }
+
+        portfolio2.onclick = function() {
+            portfolioBar.className = 'bar state-2'
+        }
+
+        portfolio3.onclick = function() {
+            portfolioBar.className = 'bar state-3'
+        }
+    </script>
 </body>
 </html>
