--- a/resume/index.html
+++ b/resume/index.html
@@ -142,7 +142,7 @@
     <section class="portfolio contentBox" style="">
         <h2>作品集</h2>
         <nav>
-            <ol>
+            <ol class="clearfix">
                 <li id="portfolio1">所有</li>
                 <li id="portfolio2">框架</li>
                 <li id="portfolio3">原生JS&amp;CSS</li>
