--- a/demo/nav-page/navIndex.html
+++ b/demo/nav-page/navIndex.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header></header>
-    <main id="mainxxx">
-        
+    <main>
+        <div class="wrapper" id="mainxxx"></div>
     </main>
     <footer></footer>
 
@@ -45,7 +45,18 @@
                 kbdxxx = document.createElement('kbd');
                 divxxx.append(kbdxxx);
                 kbdxxx.textContent = lineKey[lineIdx];
-                
+
+                btnXXX = document.createElement('button');
+                btnXXX.textContent = '编辑';
+                btnXXX.className = kbdxxx.textContent;
+                kbdxxx.append(btnXXX);
+
+                btnXXX.onclick = function(xjkdsflkjsf) {
+                    console.log('进入编辑', xjkdsflkjsf);
+                    var modifyURL = prompt('请输入更改后的网址');
+                    hash[this.className] = modifyURL;
+                }
+
                 lineIdx ++;
             }
 
@@ -54,7 +65,7 @@
 
         document.onkeyup = function(e) {
             console.log('哇呜，键盘上的我被按到了', e);
-            if(e.key && hash[e.key]) {
+            if(!e.ctrlKey && !e.altKey && !e.shiftKey&& e.key && hash[e.key]) {
                 //location.href = 'http://' + hash[e.key];
                 window.open('http://' + hash[e.key], '_blank');
             }
