--- a/demo/nav-page/navIndex.html
+++ b/demo/nav-page/navIndex.html
@@ -39,6 +39,7 @@
             f: 'facebook.com',
             g: 'google.com.hk',
             j: 'juejin.im',
+            z: 'zhihu.com',
             v: 'v2ex.com',
             b: 'baidu.com',
             n: 'nodejs.com'
